minor changes to ms, included correct figure refs

--- a/gREM_ms_20062014_EMKJ.tex
+++ b/gREM_ms_20062014_EMKJ.tex
@@ -118,14 +118,14 @@ In this study we create a generalised REM (gREM), as an extension to the camera 
 
 \subsection{Analytical Model}
 
-The REM presented by \citep{rowcliffe2008estimating} adapts the gas model to model count data from camera trap surveys. The REM is derived assuming a stationary sensor with a detection width $\theta$ less than $\pi/2$ radians and detection distance $r$ (Appendix S1 for a list of symbols), giving a circular sector within which animals can be captured (detection zone)(Figure~\ref{}). However, in order to apply this approach more generally, and in particular to acoustic detectors, we need both to relax the constraint on sensor detection width, and allow for animals with directional signals. We therefore model the animal as having an associated signal width $\alpha$ (Figure~\ref{}). Consequently, we derive the gREM for any detection width, $ \theta$, between 0 and $2\pi$ and any signal width, $ \alpha$, between 0 and $2\pi$. We start deriving the gREM with the simplest situation, the gas model where $\theta =  2\pi$ and $ \alpha =  2\pi$. 
+The REM presented by \citep{rowcliffe2008estimating} adapts the gas model to model count data from camera trap surveys. The REM is derived assuming a stationary sensor with a detection width $\theta$ less than $\pi/2$ radians and detection distance $r$ (Appendix S1 for a list of symbols), giving a circular sector within which animals can be captured (detection zone)(Figure~\ref{f:AngleDef}). However, in order to apply this approach more generally, and in particular to acoustic detectors, we need both to relax the constraint on sensor detection width, and allow for animals with directional signals. We therefore model the animal as having an associated signal width $\alpha$ (Figure~\ref{f:AngleDef}). Consequently, we derive the gREM for any detection width, $ \theta$, between 0 and $2\pi$ and any signal width, $ \alpha$, between 0 and $2\pi$. We start deriving the gREM with the simplest situation, the gas model where $\theta =  2\pi$ and $ \alpha =  2\pi$. 
 
 %%% Put in new diagram.
 \begin{figure}[t]
         \centering
 	\includegraphics[width=0.6\textwidth]{imgs/angleDefinitions.pdf}
-\label{f:Slide2}
-\caption{Representation of sensor detection width and animal signal width. The filled square and circle represent a sensor and an animal, respectively; $\theta$, sensor detection width (radians); r, sensor detection distance; dark grey shaded area, sensor detection zone; $\alpha$, animal signal width (radians). Dashed lines around the filled sqaure and circle represents the maximum extent of $\theta$ and $\alpha$, respectively.}
+\label{f:AngleDef}
+\caption{Representation of sensor detection width and animal signal width. The filled square and circle represent a sensor and an animal, respectively; $\theta$, sensor detection width (radians); r, sensor detection distance; dark grey shaded area, sensor detection zone; $\alpha$, animal signal width (radians). Dashed lines around the filled square and circle represents the maximum extent of $\theta$ and $\alpha$, respectively.} % needs new description for the sensor detection zone  
 
 \end{figure}
 
@@ -168,7 +168,7 @@ We have identified the parameter space for the combinations of$\theta$ and $\alp
 
 \subsubsection{Example derivation of SE2}
 
-In order to calculate the size of the detection zone presented to the animal (averaged across all approach angles), we have to integrate over the focal angle, $x_1$ (Figure~\ref{}). This is the focal angle taken from the centre line of the sensor. Other focal angles are possible ($x_2$, $x_3$, $x_4$) and are used in other gREM sub-models (see Appendix S2). As the size of the detection zone depends on the approach angle, we present the derivation across all approach angles. When the sensor is directly approaching the animal, $x_1  = \pi/2$ and the size of detection zone is $2r$ (Figure~\ref{f:Slide2}). 
+In order to calculate the size of the detection zone presented to the animal (averaged across all approach angles), we have to integrate over the focal angle, $x_1$ (Figure~\ref{f:x2start}). This is the focal angle taken from the centre line of the sensor. Other focal angles are possible ($x_2$, $x_3$, $x_4$) and are used in other gREM sub-models (see Appendix S2). As the size of the detection zone depends on the approach angle, we present the derivation across all approach angles. When the sensor is directly approaching the animal, $x_1  = \pi/2$ and the size of detection zone is $2r$ (Figure~\ref{f:Slide2}). 
 
 As the sensor travels anti-clockwise around the animal, the size of the detection zone will remain at $2r$ until the approach angle is greater than $\alpha/2$ (Figure~\ref{f:Slide2}). The size of the detection zone is therefore $2r\sin$($\alpha$/2). At this point, the size of $\alpha$ limits the size of the detection zone. This remains the case until the sensor reaches the right hand side of the animal where $x_1$  = $\theta$/2 + $\pi$/2 - $\alpha$/2 (Figure~\ref{f:Slide2}). The size of the detection zone is $r\sin( \alpha/2) + r\cos( x_1  - \theta/2)$ and the size of $\theta/$ limits the size of the detection zone. Finally, at $x_1  = 5\pi/2 - \theta/2  - \alpha/2$ an animal can again be detected from the right side of the detector; the approach angle is far enough round to see past the `blind spot' of the sensor. In this region, until $x_1  = 3\pi/2$, the width of the profile is again $2r\sin(\alpha/2)$. 
 
