updated fid references

--- a/gREM_ms_20062014_EMKJ.tex
+++ b/gREM_ms_20062014_EMKJ.tex
@@ -168,9 +168,9 @@ We have identified the parameter space for the combinations of$\theta$ and $\alp
 
 \subsubsection{Example derivation of SE2}
 
-In order to calculate the size of the detection zone presented to the animal (averaged across all approach angles), we have to integrate over the focal angle, $x_1$ (Figure~\ref{f:x2start}). This is the focal angle taken from the centre line of the sensor. Other focal angles are possible ($x_2$, $x_3$, $x_4$) and are used in other gREM sub-models (see Appendix S2). As the size of the detection zone depends on the approach angle, we present the derivation across all approach angles. When the sensor is directly approaching the animal, $x_1  = \pi/2$ and the size of detection zone is $2r$ (Figure~\ref{f:Slide2}). 
+In order to calculate the size of the detection zone presented to the animal (averaged across all approach angles), we have to integrate over the focal angle, $x_1$ (Figure~\ref{f:x2start}). This is the focal angle taken from the centre line of the sensor. Other focal angles are possible ($x_2$, $x_3$, $x_4$) and are used in other gREM sub-models (see Appendix S2). As the size of the detection zone depends on the approach angle, we present the derivation across all approach angles. When the sensor is directly approaching the animal, $x_1  = \pi/2$ and the size of detection zone is $2r$ (Figure~\ref{f:firstInt}). 
 
-As the sensor travels anti-clockwise around the animal, the size of the detection zone will remain at $2r$ until the approach angle is greater than $\alpha/2$ (Figure~\ref{f:Slide2}). The size of the detection zone is therefore $2r\sin$($\alpha$/2). At this point, the size of $\alpha$ limits the size of the detection zone. This remains the case until the sensor reaches the right hand side of the animal where $x_1$  = $\theta$/2 + $\pi$/2 - $\alpha$/2 (Figure~\ref{f:Slide2}). The size of the detection zone is $r\sin( \alpha/2) + r\cos( x_1  - \theta/2)$ and the size of $\theta/$ limits the size of the detection zone. Finally, at $x_1  = 5\pi/2 - \theta/2  - \alpha/2$ an animal can again be detected from the right side of the detector; the approach angle is far enough round to see past the `blind spot' of the sensor. In this region, until $x_1  = 3\pi/2$, the width of the profile is again $2r\sin(\alpha/2)$. 
+As the sensor travels anti-clockwise around the animal, the size of the detection zone will remain at $2r$ until the approach angle is greater than $\alpha/2$ (Figure~\ref{f:firstInt}). The size of the detection zone is therefore $2r\sin$($\alpha$/2). At this point, the size of $\alpha$ limits the size of the detection zone. This remains the case until the sensor reaches the right hand side of the animal where $x_1$  = $\theta$/2 + $\pi$/2 - $\alpha$/2 (Figure~\ref{f:secondInt}). The size of the detection zone is $r\sin( \alpha/2) + r\cos( x_1  - \theta/2)$ and the size of $\theta/$ limits the size of the detection zone. Finally, at $x_1  = 5\pi/2 - \theta/2  - \alpha/2$ an animal can again be detected from the right side of the detector; the approach angle is far enough round to see past the `blind spot' of the sensor. In this region, until $x_1  = 3\pi/2$, the width of the profile is again $2r\sin(\alpha/2)$ (Figure~\ref{f:thirdInt}). 
 
 % will remain at $2r$ until the approach angle is greater than $\alpha/2$ (Figure~\ref{f:Slide2}). The size of the detection zone is therefore $2r\sin$($\alpha$/2). At this point, the size of $\alpha$ limits the size of the detection zone. This remains the case until the sensor reaches the right hand side of the animal where $x_1$  = $\theta$/2 + $\pi$/2 - $\alpha$/2 (Figure~\ref{f:Slide2}). The size of the detection zone is $r\sin( \alpha/2) + r\cos( x_1  - \theta/2)$ and the size of $\theta/$ limits the size of the detection zone. Finally, at $x_1  = 5\pi/2 - \theta/2  - \alpha/2$ an animal can again be detected from the right side of the detector; the approach angle is far enough round to see past the `blind spot' of the sensor. In this region, until $x_1  = 3\pi/2$, the width of the profile is again $2r\sin(\alpha/2)$. 
 
@@ -205,7 +205,7 @@ As the sensor travels anti-clockwise around the animal, the size of the detectio
                 \caption{Third Integral}
                 \label{f:thirdInt}
         \end{subfigure}%%
-\label{f:Slide2}
+\label{f:x1AndInt}
 \caption{Representation of size of the detection zone presented to the animal by the sensor for a focal angle of $x_1$ for (a) directly approaching blah, (b) blah, and (c) blah. The filled square and circle represent a sensor and an animal, respectively; dark grey shaded area, sensor detection zone; red line, size of the detection zone presented to the animal; $x_1$, focal angle; and the dashed arrow represents the movement of the sensor.}
 \end{figure}
 
