Figures added in tex of ms.

--- a/gREM_ms_20062014_EMKJ.tex
+++ b/gREM_ms_20062014_EMKJ.tex
@@ -187,7 +187,7 @@ As the sensor travels anti-clockwise around the animal, the size of the detectio
 	~ 
 	\begin{subfigure}[t]{0.45\textwidth}
                 \centering
-		\includegraphics[width=1\textwidth]{imgs/integralOne.pdf}
+		\includegraphics[width=1\textwidth]{imgs/firstIntegral.pdf}
                 \caption{First integral}
                 \label{f:firstInt}
         \end{subfigure}%%
