Figure alignment sorted.

--- a/gREM_ms_20062014_EMKJ.tex
+++ b/gREM_ms_20062014_EMKJ.tex
@@ -123,7 +123,7 @@ The REM presented by \citep{rowcliffe2008estimating} adapts the gas model to mod
 %%% Put in new diagram.
 \begin{figure}[t]
         \centering
-	\includegraphics[width=0.6\textwidth]{imgs/angleDefinitions.pdf}
+	\includegraphics[width=0.2\textwidth]{imgs/angleDefinitions.pdf}
 \label{f:AngleDef}
 \caption{Representation of sensor detection width and animal signal width. The filled square and circle represent a sensor and an animal, respectively; $\theta$, sensor detection width (radians); r, sensor detection distance; dark grey shaded area, sensor detection zone; $\alpha$, animal signal width (radians). Dashed lines around the filled square and circle represents the maximum extent of $\theta$ and $\alpha$, respectively.} % needs new description for the sensor detection zone  
 
@@ -180,28 +180,28 @@ As the sensor travels anti-clockwise around the animal, the size of the detectio
         \centering
 	\begin{subfigure}[t]{0.45\textwidth}
                 \centering
-		\includegraphics[width=1\textwidth]{imgs/x1.pdf}
+		\includegraphics[width=1\textwidth, trim= 6cm 1cm 6cm 0.3cm]{imgs/x1.pdf}
                 \caption{Location of $x_1$ }
                 \label{f:x2start}
         \end{subfigure}%%
 	~ 
 	\begin{subfigure}[t]{0.45\textwidth}
                 \centering
-		\includegraphics[width=1\textwidth]{imgs/firstIntegral.pdf}
+		\includegraphics[width=1\textwidth, trim= 6cm 1cm 6cm 0.3cm]{imgs/firstIntegral.pdf}
                 \caption{First integral}
                 \label{f:firstInt}
         \end{subfigure}%%
 	 
 	\begin{subfigure}[t]{0.45\textwidth}
                 \centering
-		\includegraphics[width=1\textwidth]{imgs/secondIntegral.pdf}
+		\includegraphics[width=1\textwidth, trim= 6cm 1cm 6cm 0.3cm]{imgs/secondIntegral.pdf}
                 \caption{Second Integral}
                 \label{f:secondInt}
         \end{subfigure}%%
 	~ 
 	\begin{subfigure}[t]{0.45\textwidth}
                 \centering
-		\includegraphics[width=1\textwidth]{imgs/thirdIntegral.pdf}
+		\includegraphics[width=1\textwidth, trim= 6cm 1cm 6cm 0.3cm]{imgs/thirdIntegral.pdf}
                 \caption{Third Integral}
                 \label{f:thirdInt}
         \end{subfigure}%%
