--- a/gREM Introduction 02072014 EM.tex
+++ b/gREM Introduction 02072014 EM.tex
@@ -1,21 +1,23 @@
 %Wildlife montoring important (declines in populations, global declines)
 %Wildlife monitoring tech growing in sophication and widespread (remote sensors visual and acoustic)
 %Difficult to estimate abundance and densities (needed for monitoring)
-Animal population size is one of the fundamental measures needed in ecology and conservation. The absolute size of a population has important implications for a range of issues such as genetic diversity \citep{o1985genetic, fischer2000genetic, willi2005threefold}, sensitivity to stochastic fluctuations \citep{richter1972extinction,wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. Sensor technology, such as camera traps \citep{rowcliffe2008surveys,ahumada2011community} and acoustic detectors \citep{ofarrel1999comparison,mellinger2007fixed,walters2012continental} are becoming increasingly used to survey animal populations \citep{rowcliffe2008surveys, kessel2014review}, as they are efficient, relativity cheap and non-invasive \citep{gese2001monitoring, o2003crouching, silveira2003camera}, allowing for surveys over large areas and long periods. However, the problem of converting sampled count data to estimates of density remains as efforts must be made to account for detectability of the animals \citep{dail2011models, chandler2011inference, solymos2013calibrating}.
+Animal population density is one of the fundamental measures needed in ecology and conservation. The density of a population has important implications for a range of issues such as sensitivity to stochastic fluctuations \citep{richter1972extinction,wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. Monitoring animal population changes in response to anthropongenic pressure is becoming increasingly important as humans modify habitats and change climates as never before (ref ref). Sensor technology, such as camera traps \citep{rowcliffe2008surveys,ahumada2011community} and acoustic detectors \citep{ofarrel1999comparison,mellinger2007fixed,walters2012continental} are becoming increasingly used to monitor changes in animal populations \citep{rowcliffe2008surveys, kessel2014review}, as they are efficient, relativity cheap and non-invasive \citep{gese2001monitoring, o2003crouching, silveira2003camera}, allowing for surveys over large areas and long periods. However, the problem of converting sampled count data to estimates of density remains as efforts must be made to account for detectability of the animals \citep{dail2011models, chandler2011inference, solymos2013calibrating}.
 
 
 %Current methods are often inadequate because of specific data requirements (marked indivudals)
 %REM developed for camera trap data, doesnt need this assumptions 
 %but has limitations
 %Specifically sensor widths - different environments might need more flexibility (examples) and signal directionality assumptions (examples) - method has been optimised for terrestrial large animals
-Methods do already exist for estimating animal density if the distance between the animal and the sensor can be estimated, although these often ignore animal movement which may bias estimates \citep{barlow2005estimates, marques2011estimating}, or if the individuals can be individually recognised, e.g. capture-mark-recapture \citep{karanth1995, trolle2003estimation, soisalo2006estimating, trolle2007camera}. Individual recognition and distance estimation are not always possible however. The random encounter model (REM) removes the need for these assumptions but is only suitable for use with some camera traps. The REM is a modified version of a gas model where the sensors have a detection angle (the angle within which an animal can be detected) up to $\pi$/2 radians and an animal is equally detectable given any angle of approach \citep{rowcliffe2008estimating}. This angular requirement of the sensor in REM may not cover acoustic detectors \citep{adams2012you}, or some types of camera traps. For example, fisheye lenses have been developed for monitoring of the canopy \citep{brusa2014increasing}, but any count data collected with these cameras could not be inputted into the REM as they do not meet the angular assumptions. Any camera looking down on a terrestrial landscape or in a marine environment would have a circular view point, and once again this data would not be suitable for use with the REM. Furthermore, if a species can not be identified from all possible angles, or an animal has a directional call, the existing REM would not be suitable.
+Methods do already exist for estimating animal density if the distance between the animal and the sensor can be estimated (e.g., capture-mark recapture methods (ref) and distance sampling (ref)). However, these methods often require additional information that may not be available. For example, capture-mark-recapture methods \citep{karanth1995, trolle2003estimation, soisalo2006estimating, trolle2007camera} require recognition of indivudals; distance methods require a distance estimation of how far away individuals are from the sensor {barlow2005estimates, marques2011estimating}. The development of the random encounter model (REM) (a modification of a gas model) enabled animal densities to be estimated from unmarked indivudals of a known speed, and sensor detection parameters (ref). The REM method has been succesfully applied to estimate animal densities from camera trap surveys(cats ref, cows ref). However, extending the REM method to other types of sensors (for example acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading (ref).
+
+Whilst these restrictions are not problematic for most camera trap makes (e.g. make 1, make 2), the REM could not be used to estimate densities from camera traps with a wider sensor width (e.g. canopy monitoring with fish eye lens \citep{brusa2014increasing}). Additionally, the REM method would not be useful in estimating densities from acoustic survey data as the acoustic detector angles are often wider than $\pi/2$ radians.  Acoustic detectors are designed for a range of diverse tasks and environments \citep{kessel2014review}, which will naturally lead to a wide range of sensor detection widths and detection distances. In addition to this, calls emited by many animals are directional(breaking the assumption of the REM method). 
 
 %acoustic monitoring becoming more common method of monitoring but has additional sensor width problems (examples) and directionality of signals (examples). 
 %Currently the count data from acoustic monitoring is used for monitoring in different ways (examples). 
-There has been a sharp rise in interest around passive acoustic detectors in recent years, with a 10 fold increase in publications in the decade between 2000 and 2010 \citep{kessel2014review}. However there is great variety in the data collected from acoustic detectors. They are designed for a range of diverse tasks and environments \citep{kessel2014review}, which will naturally lead to a wide range of sensor detection widths and detection distances. In addition to this, different species of animals will display different directionality in their calls, and they will even differ within species depending on the purpose \citep{jakobsen2012convergent}. Acoustic monitoring is being developed to study many aspects of ecology, including the interactions of animals and their environments \citep{blumstein2011acoustic, straight2014passive, marcoux2011local, rogers2013density}, the presence and relative abundances of species \citep{mckown2012wireless, marcoux2011local}, and biodiversity of an area \citep{ depraetere2012monitoring}. However there are few methods for estimation of absolute abundance of animal densities with acoustic data. 
 
-%Another limitation to using these sensors is lack of guidelines on how survey effort impacts the accuracy and precision of estimates (guidelines would be useful. practically can only be done within simulated environment, rarely done)
-A further limitation of the current methods is that they maybe inaccurate and lack precision if they are applied to poorly collected remote sensor data \citep{rees2011testing}, for this reason a robust set of guidelines is necessary. If it possible to test different monitoring methodologies with simulations in order to access the accuracy of these techniques \citep{ivan2013using, borchers2008spatially}, and provide insight into what level of sampling effort is appropriate \citep{rees2011testing}. 
+There has been a sharp rise in interest around passive acoustic detectors in recent years, with a 10 fold increase in publications in the decade between 2000 and 2010 \citep{kessel2014review}. Acoustic monitoring is being developed to study many aspects of ecology, including the interactions of animals and their environments \citep{blumstein2011acoustic, straight2014passive, marcoux2011local, rogers2013density}, the presence and relative abundances of species \citep{mckown2012wireless, marcoux2011local}, and biodiversity of an area \citep{ depraetere2012monitoring}. 
 
-%We develop gREM and tested it and come up with specific recommedations for its use (providing code for implementation). we controlled for different animal movement by testing the robustness of gREM with different movement model (examples).
-In this study we create a generalised REM (gREM), as an extension to the camera trap model of \citep{rowcliffe2008estimating}, to estimate absolute density from count data from acoustic detectors, or camera traps, where the sensor width can vary from 0 to $2\pi$ radians, and the acoustic signal given off from the animal can be directional (we call the width of an animals acoustic signal a signal width). We have provided an R \citep{R} script for the implementation of the gREM in Appendix S1. The gREM was tested using simulations in order to assess the validity of the models and in order to give suggestions for best practice. Specifically, we test that the gREM can accurately predict density when the assumptions of a homogeneous environment and straight-line animal movement are met. We went on to test the accuracy of the gREM if the assumptions about animal movement were broken, including stop-start movement and correlated and random walks.
+Acoustic data suffers from many of the problems assocaited with data from camera trap surveys in that individuals are often unmarked so capture-make-recapture methods cannot be used to estimate densities. In some cases the distance between the animal and the sensor is known (ref), for example when an array of sensors and the position of the animal is estimated by triangulation (ref)). In these situations distance-sampling methods can be applied, a method typically used for marine mammals (refs). However, in many cases distance estimation is not possible, for example when single sensors are deployed, a situation typical in the majority of terrestrial acoustic surveys (bats ref, frogs ref, birds ref). In these cases, only relative measures of local abundance can be calculated, and not absolute densities. This means that comparison of populations between species and sites is problematic without assuming equal detectabilty (refs, refs). Equality detectabilty is unlikely because of differences in environmental conditions, sensor type, habitats, species biology (ref?). 
+
+In this study we create a generalised REM (gREM), as an extension to the camera trap model of \citep{rowcliffe2008estimating}, to estimate absolute density from count data from acoustic detectors, or camera traps, where the sensor width can vary from 0 to $2\pi$ radians, and the signal given off from the animal can be directional. We assessed the accuracy and precision of the gREM within a simulated environment, by varying the sensor detection widths, animal signal widths, number of captures and models of animal movement. We use the simulation results to reccomend best survey practice for estimating animal densities from remote sensors. 
+
