Added glossary of terms, plus changes to intro

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-07-02 16:17:01 +0100 
+%% Created for Elizabeth Moorcroft at 2014-07-10 12:34:15 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -384,9 +384,9 @@
 	Volume = {9},
 	Year = {2006}}
 
-@article{karanth1995,
+@article{karanth1995Estimating,
 	Author = {Karanth, KU},
-	Date-Modified = {2014-06-18 14:35:56 +0000},
+	Date-Modified = {2014-07-10 11:34:15 +0000},
 	Journal = {Biological Conservation},
 	Number = {3},
 	Pages = {333--338},
